# TinaDouyin

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/tina/douyin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceTrack.cpp  native-lib.cpp
app/src/main/java/com/tina/douyin/: MainActivity.java
app/src/main/java/com/tina/douyin/camera/face/: Face.java  FaceTrack.java
app/src/main/java/com/tina/douyin/camera/filiter/: AbstractFilter.java  AbstractFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/tina/douyin/face/: Face.java  FaceTrack.java
app/src/main/java/com/tina/douyin/filiter/: AbstractFilter.java  AbstractFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFiliter.java  ScreenFilter.java  StickFilter.java
app/src/main/java/com/tina/douyin/record/: EGLBase.java  MediaRecorder.java
app/src/main/java/com/tina/douyin/util/: CameraHelper.java  OpenGLUtils.java  OpenUtils.java
app/src/main/java/com/tina/douyin/video/: VideoActivity.java
app/src/main/java/com/tina/douyin/widget/: DouyinRender.java  DouyinView.java  RecordButton.java
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/raw/: base_frag.frag  base_vertex.vert  beauty_frag.frag  bigeye_frag.frag  camera_frag.frag  camera_vertex.vert  soul_frag.frag  soul_vertex.vert  test.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/tina/douyin/: ExampleUnitTest.java
(+11 files in other folders)
